#253: OpenAPI `Endpoint` examples for Block APIs
